# async-timer

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/examples/: fastapi_example.py
src/async_timer/: __init__.py  pacemaker.py  timer.py  traget_caller.py
src/mock_async_timer/: __init__.py  timer.py
tests/: conftest.py  test_pacemaker.py  test_target_caller.py  test_timer.py
tests/async_timer/: test_simple.py  test_timer.py  test_timer_async_cancel.py
tests/mock_async_timer/: test_mock_timer_pacemaker.py  test_mock_timer_simple.py
