[tool.poetry]
name = "async-timer"
version = "0.0.0dev0"
description = "The missing Python async timer."
authors = ["Ilya O. <vrghost@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "async_timer", from = "src"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
keywords = ["async", "timer"]

[tool.poetry.urls]
"Source" = "https://github.com/VRGhost/async-timer"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-local-badge = "^1.0.3"
ruff = "^0.1.7"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"
asyncstdlib = "^3.10.9"

[tool.ruff]
target-version = "py38"
select = [
    # https://beta.ruff.rs/docs/rules/
    "A", # do not shadow bultins - TODO
    "B",  # flake8-bugbear
    "C",
    "E",
    "F",
    "I",  # isort
    "W",  # pycodestyle
    "N",  # pep8 naming
    "C4", # list comprehensions
    "T20", # print()
    "PTH", # use-pathlib - todo
]
ignore = ["N802", "F841"]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # imported but unused
    "F401",
    # E402 Module level import not at top of file
    "E402",
]


[tool.ruff.isort]
order-by-type = true
known-first-party = ["async_timer", "mock_async_timer", ]
forced-separate = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
addopts = "-v -l --color=yes --cov=async_timer --cov=mock_async_timer --cov-report term-missing --no-cov-on-fail --local-badge-output-dir docs/badges/"
testpaths = [
    "tests",
]
timeout = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
